【1】Update .gitignore 【2】Update Gradle Location Depository

--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -4,7 +4,7 @@ build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(LOCAL_INSTALLATION(D\:\\2017\\Gradle\\gradle-5.4.1))
 connection.project.dir=
 eclipse.preferences.version=1
-gradle.user.home=
+gradle.user.home=D\:/2017/Gradle/.gradle
 java.home=C\:/Program Files/Java/jdk1.8.0_65
 jvm.arguments=
 offline.mode=false
